asttest/self-tests/test_error/tests/syntax_error/test.lua
-- test handling of syntax errors

s1 = "string"
s2 = "syntax error, missing \"
